# NovaCore.AI.CustomAgent

./: .app-checksums.txt  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FINAL_VERIFICATION.md  LICENSE  README.md  SECURITY.md  flake.nix  pyproject.toml  pytest.ini
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  security-build.yml  tests.yml
docker/: Dockerfile  compose.yml
docs/: README.md
docs/api/: index.html
docs/architecture/: README.md  capability_design.md  clean_architecture.md  microkernel_pattern.md
docs/deployment/: cloud_deployment.md  local_setup.md  security_hardening.md
docs/governance/: compliance_matrix.md  security_policy.md
monitoring/: README.md
phases/: 1_placeholder.sh  2_placeholder.sh  3_placeholder.sh  4_placeholder.sh  5_placeholder.sh  6_placeholder.sh  7_placeholder.sh
pipelines/: README.md
scripts/: sbom-sign.sh
security/: README.md
src/novacore_ai/: README.md  __init__.py  api.py
src/novacore_ai/agents/: README.md
src/novacore_ai/agents/coding_agent/: agent_config.yaml
src/novacore_ai/agents/guardian_agent/: agent_config.yaml  deployment.yaml
src/novacore_ai/agents/orchestrator_agent/: agent_config.yaml
src/novacore_ai/agents/research_agent/: agent.py  agent_config.yaml
src/novacore_ai/agents/shared/: __init__.py  (+2 more)
src/novacore_ai/capabilities/: README.md
src/novacore_ai/infrastructure/: README.md
src/novacore_ai/kernel/: README.md
src/novacore_ai/shared/: README.md
tests/: README.md
(+32 files in other folders)
